# Stocktotum

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  pyproject.toml
cicd/local/: env_template.toml
config/: crow.toml
public/: ema.html  index.html  moving-average.stache  sma.html
py_data/: main.py
py_data/cmds/: __init__.py  cmd_utils.py  update_av_data.py
py_data/config/: __init__.py
py_data/data_utils/: file.py
py_stocktotum/: main.py  test.py
py_stocktotum/alphvant/: __init__.py  browse_symbols.py  cache.py  time_series.py
py_stocktotum/cmds/: __init__.py  back_test.py  cmd_utils.py  graph_many.py  graph_mr.py  graph_pt.py  graph_sma.py  update_av_data.py
py_stocktotum/config/: __init__.py
py_stocktotum/stocktotum/: __init__.py  mr.py  pt.py  sma.py
src/: config.cpp  config.hpp  main.cpp
src/alphvant/: api.h  log.h  settings.h  ts_daily_adj.h
src/srctools/: dates.hpp  enumerate.hpp  log.hpp
src/stocktotum/: calc_ema.h  calc_mr.h  calc_sma.h  server.h  structs.h  views.h
